// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > Snapshots > renders default layout correctly 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3


 Good afternoon — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results


















Notifications

Composer
"
`;

exports[`App > Snapshots > renders screen reader layout correctly 1`] = `
"Notifications
Footer

 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3


 Good afternoon — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
Composer
"
`;

exports[`App > Snapshots > renders with dialogs visible 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3


 Good afternoon — what are we building?

























Notifications

DialogManager
"
`;

exports[`App > should render ToolConfirmationQueue along with Composer when tool is confirming and experiment is on 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3


 Good afternoon — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
HistoryItemDisplay
 ⠋╭─────────────────────────────────────────────────────────────────────────────────────────────────
 —│ Action Required
 l│
 s│ ?  ls list directory
 l│
  │ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ │ ls                                                                                           │
  │ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
  │ Allow execution of [ls]?
  │
  │ ● 1. Allow once               
  │   2. Allow for this session
  │   3. No, suggest changes (esc)
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────



Notifications

Composer
"
`;
